<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register">Зарегистрироваться</string>
    <string name="fill_in_all_the_fields">Заполните все поля</string>
    <string name="enter_your_name">Введите Ваше имя</string>
    <string name="enter_your_email">Введите E-mail</string>
    <string name="enter_your_password">Введите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="register_with_google">Зарегистрироваться с помощью Google</string>
</resources>