<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registration_toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/background_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_back_button"
        android:layout_width="@dimen/dimens_32_dp"
        android:layout_height="@dimen/dimens_32_dp"
        android:layout_marginStart="@dimen/dimens_16_dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/registration_toolbar"
        app:layout_constraintStart_toStartOf="@+id/registration_toolbar"
        app:layout_constraintTop_toTopOf="@+id/registration_toolbar" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_16_dp"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/registration_toolbar"
        app:layout_constraintStart_toEndOf="@+id/registration_back_button"
        app:layout_constraintTop_toTopOf="@+id/registration_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dimens_16_dp"
        app:layout_constraintBottom_toTopOf="@+id/registration_with_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/registration_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_16_dp"
                android:layout_marginTop="@dimen/dimens_12_dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="@dimen/dimens_8_dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_16_dp"
                android:layout_marginTop="@dimen/dimens_12_dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="@dimen/dimens_8_dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dimens_16_dp"
                android:layout_marginTop="@dimen/dimens_12_dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="@dimen/dimens_8_dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_with_google_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/dimens_16_dp"
        android:layout_marginBottom="@dimen/dimens_16_dp"
        android:background="@drawable/button_state_background"
        android:text="@string/register_with_google"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/registration_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/dimens_16_dp"
        android:layout_marginBottom="@dimen/dimens_16_dp"
        android:background="@drawable/button_state_background"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>